# Hackathon-2-Phase-2

./: Pipfile  main.py  pyproject.toml  requirements.txt  run_server.py  setup.py  vercel-build.sh
api/: index.py
backend/: main.py
frontend/app/(dashboard)/tasks/[id]/: page.tsx
frontend/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/components/tasks/: TaskItem.tsx
