[project]
name = "hackathon-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "sqlalchemy",
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "psycopg2-binary",
    "python-dotenv>=1.2.1,<2.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "passlib[argon2]>=1.7.4,<2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
start = "run_server:main"
